struggling with jambase(50 calls a day max) and ticketmaster(whose data is useless to me) apis for different reasons

--- a/views/statics/home.ejs
+++ b/views/statics/home.ejs
@@ -3,3 +3,6 @@
 <div class="mainContent">
 
 </div>
+
+<a href="http://www.JamBase.com" target="_top" title="JamBase Concert Search">
+<img src= "http://images.jambase.com/logos/jambase140x70.gif" alt="Search JamBase Concerts" border="0" /></a>
