the quick part, making routes, testing outputs, then refactoring into AJAX as I go

--- a/views/statics/home.ejs
+++ b/views/statics/home.ejs
@@ -1,8 +1,13 @@
 <h1>Homepage</h1>
 
-<div class="mainContent">
+<div class="users">
 
 </div>
 
-<a href="http://www.JamBase.com" target="_top" title="JamBase Concert Search">
-<img src= "http://images.jambase.com/logos/jambase140x70.gif" alt="Search JamBase Concerts" border="0" /></a>
+<div class="artists">
+
+</div>
+
+<div class="venues">
+
+</div>
