displaying all models on index page via internal AJAX calls

--- a/views/statics/home.ejs
+++ b/views/statics/home.ejs
@@ -1,13 +1,26 @@
 <h1>Homepage</h1>
+<hr>
 
 <div class="users">
+  <h4>Users</h4>
 
 </div>
+<hr>
 
 <div class="artists">
+  <h4>Artists</h4>
 
 </div>
+<hr>
 
 <div class="venues">
+  <h4>Venues</h4>
 
 </div>
+<hr>
+
+<div class="events">
+  <h4>Events</h4>
+
+</div>
+<hr>
