--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,9 +15,12 @@
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
   <script src="/js/client.js" charset="utf-8"></script>
-  
+
 </head>
 <body>
+  <header>
+    <%- include ./partials/nav %>
+  </header>
   <main>
     <%- body %>
   </main>
