--- a/views/artists/artist.ejs
+++ b/views/artists/artist.ejs
@@ -4,6 +4,9 @@
   <h4><%= artist.name %></h4>
   <p><%= artist.description %></p>
   <p><%= artist._id %></p>
+  <p><%= artist.members.length %> members</p>
+  <p><%= artist.albums.length %> albums</p>
+
 <% }else{ %>
   <h4>No artist found</h4>
 <% } %>
