refactored controllers out of routes.js

--- a/views/statics/home.ejs
+++ b/views/statics/home.ejs
@@ -1,11 +1,7 @@
 <h1>Homepage</h1>
 <hr>
 
-<div class="users">
-  <h4>Users</h4>
-
-</div>
-<hr>
+<%# <div class="users"><h4>Users</h4></div><hr>%>
 
 <div class="artists">
   <h4>Artists</h4>
