--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,12 +18,18 @@
 
 </head>
 <body>
+
   <header>
     <%- include ./partials/nav %>
+    <div id="notification" class="notification" style="display: none">
+      <button class="delete"></button>
+    </div>
   </header>
+
   <main>
     <%- body %>
     <%- include ./partials/registerModal %>
   </main>
+  
 </body>
 </html>
