--- a/views/partials/loginForm.ejs
+++ b/views/partials/loginForm.ejs
@@ -1,4 +1,4 @@
-<form id="loginForm" action="/login">
+<form id="loginForm" action="/login" method="post">
   <div class="field-body">
     <div class="field is-grouped nav-item is-tab">
       <p class="control is-expanded">
@@ -9,6 +9,7 @@
       <p class="control is-expanded">
         <input class="input" type="password" name="password" placeholder="Password">
       </p>
+      <input type="submit" style="display: none">
     </div>
     <a id="loginSubmit" class="nav-item is-tab" href="javascript:void(0)">Log In</a>
   </div>
