--- a/views/partials/registerModal.ejs
+++ b/views/partials/registerModal.ejs
@@ -10,22 +10,22 @@
 <form action="/register">
   <div class="field">
     <p class="control has-icons-left">
-      <input class="input" type="text" placeholder="Screen name">
+      <input class="input" type="text" name="name" placeholder="Screen name">
     </p>
   </div>
   <div class="field">
     <p class="control has-icons-left">
-      <input class="input" type="email" placeholder="Email">
+      <input class="input" type="email" name="email" placeholder="Email">
     </p>
   </div>
   <div class="field">
     <p class="control has-icons-left">
-      <input class="input" type="password" placeholder="Password">
+      <input class="input" type="password" name="password" placeholder="Password">
     </p>
   </div>
   <div class="field">
     <p class="control has-icons-left">
-      <input class="input" type="password" placeholder="Confirm password">
+      <input class="input" type="password" name="passwordConf" placeholder="Confirm password">
     </p>
   </div>
   <div class="field">
