--- a/views/partials/registerModal.ejs
+++ b/views/partials/registerModal.ejs
@@ -10,7 +10,7 @@
 <form action="/register">
   <div class="field">
     <p class="control has-icons-left">
-      <input class="input" type="text" name="name" placeholder="Screen name">
+      <input class="input" type="text" name="username" placeholder="Screen name">
     </p>
   </div>
   <div class="field">
