--- a/views/statics/home.ejs
+++ b/views/statics/home.ejs
@@ -1,22 +1,65 @@
-<h1>Homepage</h1>
-<hr>
+<section class="hero is-primary">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">
+        Homepage
+      </h1>
+      <h2 class="subtitle">
+        Subtitle
+      </h2>
+    </div>
+  </div>
+</section>
 
 <%# <div class="users"><h4>Users</h4></div><hr>%>
 
 <div class="artists">
-  <h4>Artists</h4>
+  <section class="hero">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title">
+          Artists
+        </h1>
+        <h2 class="subtitle">
+          Subtitle
+        </h2>
+      </div>
+    </div>
+  </section>
 
 </div>
 <hr>
 
 <div class="venues">
-  <h4>Venues</h4>
+  <section class="hero">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title">
+          Venues
+        </h1>
+        <h2 class="subtitle">
+          Subtitle
+        </h2>
+      </div>
+    </div>
+  </section>
 
 </div>
 <hr>
 
 <div class="events">
-  <h4>Events</h4>
+  <section class="hero">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title">
+          Events
+        </h1>
+        <h2 class="subtitle">
+          Subtitle
+        </h2>
+      </div>
+    </div>
+  </section>
 
 </div>
 <hr>
