--- a/views/artists/artist.ejs
+++ b/views/artists/artist.ejs
@@ -1,11 +1,29 @@
-<h1>Artist</h1>
-
 <% if(artist) { %>
-  <h4><%= artist.name %></h4>
-  <p><%= artist.description %></p>
-  <p><%= artist._id %></p>
-  <p><%= artist.members.length %> members</p>
-  <p><%= artist.albums.length %> albums</p>
+  <section class="hero is-success">
+    <div class="hero-body">
+      <div class="columns">
+        <div class="column is-6">
+          <h1 class="title"><%= artist.name %></h1>
+          <p><%= artist.description %></p>
+          <p><%= artist.members.length %> members</p>
+          <p><%= artist.albums.length %> albums</p>
+        </div>
+        <div class="column is-6">
+          <a href="#">Save to your favourites</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="hero">
+    <div class="columns">
+      <div class="column is-6">
+        <img src="<%= artist.images[0] %>" alt="">
+      </div>
+      <div class="column is-6">
+        <img src="<%= artist.images[1] %>" alt="">
+      </div>
+    </div>
+  </section>
 
 <% }else{ %>
   <h4>No artist found</h4>
