--- a/views/venues/venue.ejs
+++ b/views/venues/venue.ejs
@@ -1,9 +1,29 @@
 <h1>Venue</h1>
 
 <% if(venue) { %>
-  <h4><%= venue.name %></h4>
-  <p><%= venue.description %></p>
-  <p><%= venue._id %></p>
+  <section class="hero">
+    <div class="hero-body">
+      <div class="columns">
+        <div class="column is-6">
+          <h1 class="title"><%= venue.name %></h1>
+          <p><%= venue.description %></p>
+        </div>
+        <div class="column is-6">
+          <a href="#">Save to your favourites</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="hero">
+    <div class="columns">
+      <div class="column is-6">
+        <img src="<%= venue.images[0] %>" alt="">
+      </div>
+      <div class="column is-6">
+        <img src="<%= venue.images[1] %>" alt="">
+      </div>
+    </div>
+  </section>
 <% }else{ %>
   <h4>No venue found</h4>
 <% } %>
