--- a/views/artists/artist.ejs
+++ b/views/artists/artist.ejs
@@ -1,5 +1,5 @@
 <% if(artist) { %>
-  <section class="hero is-success">
+  <section class="hero">
     <div class="hero-body">
       <div class="columns">
         <div class="column is-6">
