--- a/views/partials/registerModal.ejs
+++ b/views/partials/registerModal.ejs
@@ -7,7 +7,7 @@
     </header>
     <section class="modal-card-body">
 <%# form starts here %>
-<form action="/register">
+<form action="/register" method="post">
   <div class="field">
     <p class="control has-icons-left">
       <input class="input" type="text" name="username" placeholder="Screen name">
