--- a/views/statics/account.ejs
+++ b/views/statics/account.ejs
@@ -36,12 +36,20 @@
       </p>
     </div>
   </form>
-
+  <hr>
   <form action="/account/user/<%= user._id %>" method="post">
     <input type="hidden" name="_method" value="delete">
+    <div class="field">
+      <div class="control deleteForm">
+        <label class="checkbox">
+          <input type="checkbox" required>
+          Are you certain?
+        </label>
+      </div>
+    </div>
     <div class="field is-grouped">
       <p class="control">
-        <button class="button is-primary" style="margin-bottom: 20px">Submit</button>
+        <button class="button is-primary" style="margin-bottom: 20px">Delete Account</button>
       </p>
     </div>
   </form>
