--- a/views/statics/home.ejs
+++ b/views/statics/home.ejs
@@ -68,44 +68,65 @@
 $(() => {
   function homePageItems() {
     $
-    .get('/artists')
+    // .get('/artists')
+    .get('http://app.ticketmaster.com/discovery/v2/attractions/?apikey=sJdyvBFWmrZySkRDzJ2v0wNi2qtLb7pn&locale=en-us&size=60')
     .done(artists => {
+      artists = artists._embedded.attractions.map(artist => {
+        if (artist.classifications[0].segment.name !== 'Sports') {
+          return artist;
+        }
+      }).filter(artist => {
+        return artist !== undefined;
+      });
       createList(artists, 'artist');
       clickTitle(artists, 'artist');
     });
 
     $
-    .get('/venues')
+    // .get('/venues')
+    .get('https://app.ticketmaster.com/discovery/v2/venues.json?apikey=sJdyvBFWmrZySkRDzJ2v0wNi2qtLb7pn&countryCode=GB')
     .done(venues => {
+      venues = venues._embedded.venues.map(venue => {
+        if (venue.name !== 'DEMO ORGANISATION') {
+          return venue;
+        }
+      }).filter(venue => {
+        return venue !== undefined;
+      });
       createList(venues, 'venue');
       clickTitle(venues, 'venue');
     });
+    // .then(venues => {
+    //   createList(venues, 'venue');
+    //   clickTitle(venues, 'venue');
+    // });
 
     $
-    .get('/events')
+    // .get('/events')
+    .get('https://app.ticketmaster.com/discovery/v2/events.json?apikey=sJdyvBFWmrZySkRDzJ2v0wNi2qtLb7pn&marketId=201')
     .done(events => {
+      events = events._embedded.events.map(event => {
+        if (event.name !== 'DEMO EVENT') {
+          // console.log(event._links);
+          return event;
+        }
+      }).filter(event => {
+        return event !== undefined;
+      });
       createList(events, 'event');
       clickTitle(events, 'event');
     });
-
-    // External AJAX call for gig data, this is for Primus, artist id: 3346
-
-    // $
-    // .get('http://api.jambase.com/events?artistId=3346&page=0&api_key=vked2v3ab566xrzn5tvy27g6')
-    // .done(json => {
-    //   for (const field in json) console.log(json[field]);
-    // });
 
     // createList(objectList, keyString);
 
     function clickTitle(objectList, keyString) {
       $(`.${keyString+'s'}`).on('click', () => {
         $(`.${keyString+'s'}List`).slideToggle('fast');
-
       });
     }
 
     function createList(objectList, keyString) {
+      console.log(objectList[0]);
       let parentString = `<section class="hero is-primary is-medium ${keyString+'s'}List hidden">
         <div class="hero-body">
           <div class="columns">`;
@@ -116,7 +137,7 @@ $(() => {
             ${object.name}
           </h1>
           <h2 class="subtitle">
-            <p><a href="/${keyString}/${object._id}">View page</a></p>
+            <p><a href="/${keyString}/${object.id}">View page</a></p>
           </h2>
         </div>`;
       });
