--- a/views/statics/home.ejs
+++ b/views/statics/home.ejs
@@ -66,7 +66,7 @@
 $(() => {
   function homePageItems() {
     $
-    .get('http://app.ticketmaster.com/discovery/v2/attractions.json?apikey=sJdyvBFWmrZySkRDzJ2v0wNi2qtLb7pn&locale=en-us&size=60')
+    .get('https://app.ticketmaster.com/discovery/v2/attractions.json?apikey=sJdyvBFWmrZySkRDzJ2v0wNi2qtLb7pn&locale=en-us&size=60')
     .done(artists => {
       artists = artists._embedded.attractions.map(artist => {
         if (artist.classifications[0].segment.name !== 'Sports') {
