making search form for index page

--- a/views/artists/artist.ejs
+++ b/views/artists/artist.ejs
@@ -25,3 +25,164 @@
 <% }else{ %>
   <h4>No artist found</h4>
 <% } %>
+
+<%# {
+  "name": "Elton John",
+  "type": "attraction",
+  "id": "K8vZ9171G-7",
+  "test": false,
+  "url": "http://www.ticketmaster.com/artist/735394",
+  "locale": "en-us",
+  "externalLinks": {
+    "youtube": [
+    {
+      "url": "https://www.youtube.com/user/EltonJohn"
+    }
+    ],
+    "twitter": [
+    {
+      "url": "https://twitter.com/eltonoffical"
+    }
+    ],
+    "itunes": [
+    {
+      "url": "https://itunes.apple.com/us/artist/id54657"
+    }
+    ],
+    "lastfm": [
+    {
+      "url": "http://www.last.fm/music/Elton+John"
+    }
+    ],
+    "wiki": [
+    {
+      "url": "https://en.wikipedia.org/wiki/Elton_John"
+    }
+    ],
+    "facebook": [
+    {
+      "url": "https://www.facebook.com/EltonJohn"
+    }
+    ],
+    "instagram": [
+    {
+      "url": "https://instagram.com/eltonjohn"
+    },
+    {
+      "url": "https://instagram.com/eltonjohn/"
+    }
+    ],
+    "musicbrainz": [
+    {
+      "id": "b83bc61f-8451-4a5d-8b8e-7e9ed295e822"
+    }
+    ],
+    "homepage": [
+    {
+      "url": "http://www.eltonjohn.com/"
+    }
+    ]
+  },
+  "images": [
+  {
+    "ratio": "3_2",
+    "url": "https://s1.ticketm.net/dam/a/917/6d485467-3b11-421d-80fa-263520367917_372671_ARTIST_PAGE_3_2.jpg",
+    "width": 305,
+    "height": 203,
+    "fallback": false
+  },
+  {
+    "ratio": "16_9",
+    "url": "https://s1.ticketm.net/dam/a/917/6d485467-3b11-421d-80fa-263520367917_372671_RECOMENDATION_16_9.jpg",
+    "width": 100,
+    "height": 56,
+    "fallback": false
+  },
+  {
+    "ratio": "16_9",
+    "url": "https://s1.ticketm.net/dam/a/917/6d485467-3b11-421d-80fa-263520367917_372671_TABLET_LANDSCAPE_16_9.jpg",
+    "width": 1024,
+    "height": 576,
+    "fallback": false
+  },
+  {
+    "ratio": "3_2",
+    "url": "https://s1.ticketm.net/dam/a/917/6d485467-3b11-421d-80fa-263520367917_372671_TABLET_LANDSCAPE_3_2.jpg",
+    "width": 1024,
+    "height": 683,
+    "fallback": false
+  },
+  {
+    "ratio": "16_9",
+    "url": "https://s1.ticketm.net/dam/a/917/6d485467-3b11-421d-80fa-263520367917_372671_RETINA_PORTRAIT_16_9.jpg",
+    "width": 640,
+    "height": 360,
+    "fallback": false
+  },
+  {
+    "ratio": "16_9",
+    "url": "https://s1.ticketm.net/dam/a/917/6d485467-3b11-421d-80fa-263520367917_372671_TABLET_LANDSCAPE_LARGE_16_9.jpg",
+    "width": 2048,
+    "height": 1152,
+    "fallback": false
+  },
+  {
+    "ratio": "4_3",
+    "url": "https://s1.ticketm.net/dam/a/917/6d485467-3b11-421d-80fa-263520367917_372671_CUSTOM.jpg",
+    "width": 305,
+    "height": 225,
+    "fallback": false
+  },
+  {
+    "ratio": "16_9",
+    "url": "https://s1.ticketm.net/dam/a/917/6d485467-3b11-421d-80fa-263520367917_372671_EVENT_DETAIL_PAGE_16_9.jpg",
+    "width": 205,
+    "height": 115,
+    "fallback": false
+  },
+  {
+    "ratio": "3_2",
+    "url": "https://s1.ticketm.net/dam/a/917/6d485467-3b11-421d-80fa-263520367917_372671_RETINA_PORTRAIT_3_2.jpg",
+    "width": 640,
+    "height": 427,
+    "fallback": false
+  },
+  {
+    "ratio": "16_9",
+    "url": "https://s1.ticketm.net/dam/a/917/6d485467-3b11-421d-80fa-263520367917_372671_RETINA_LANDSCAPE_16_9.jpg",
+    "width": 1136,
+    "height": 639,
+    "fallback": false
+  }
+  ],
+  "classifications": [
+  {
+    "primary": true,
+    "segment": {
+      "id": "KZFzniwnSyZfZ7v7nJ",
+      "name": "Music"
+    },
+    "genre": {
+      "id": "KnvZfZ7vAeA",
+      "name": "Rock"
+    },
+    "subGenre": {
+      "id": "KZazBEonSMnZfZ7v6F1",
+      "name": "Pop"
+    },
+    "type": {
+      "id": "KZAyXgnZfZ7v7nI",
+      "name": "Undefined"
+    },
+    "subType": {
+      "id": "KZFzBErXgnZfZ7v7lJ",
+      "name": "Undefined"
+    }
+  }
+  ],
+  "_links": {
+    "self": {
+      "href": "/discovery/v2/attractions/K8vZ9171G-7?locale=en-us"
+    }
+  }
+}%>
