--- a/views/venues/venue.ejs
+++ b/views/venues/venue.ejs
@@ -18,16 +18,61 @@
   <h4>No venue found</h4>
 <% } %>
 
-<%# const venueSchema = new mongoose.Schema({
-  name: {type: String, trim: true},
-  type: {type: String, trim: true},
-  id: {type: String, trim: true},
-  url: {type: String, trim: true},
-  locale: {type: String, trim: true},
-  postalCode: {type: String, trim: true},
-  timezone: {type: String, trim: true},
-  city: { name: {type: String, trim: true} },
-  country: { name: {type: String, trim: true}, countryCode: {type: String, trim: true} },
-  address: { line1: {type: String, trim: true} },
-  location: { longitude: {type: String, trim: true}, latitude: {type: String, trim: true} }
-});%>
+<%# {
+  "name": "Twickenham Stoop Stadium",
+  "type": "venue",
+  "id": "KovZ9177-Kf",
+  "test": false,
+  "url": "http://www.ticketmaster.co.uk/venue/434720",
+  "locale": "en-de",
+  "images": [
+  {
+    "ratio": "16_9",
+    "url": "https://s1.ticketm.net/dbimages/2403v.",
+    "width": 205,
+    "height": 115,
+    "fallback": false
+  }
+  ],
+  "postalCode": "TW2 7SX",
+  "timezone": "Europe/London",
+  "city": {
+    "name": "Twickenham"
+  },
+  "country": {
+    "name": "Great Britain",
+    "countryCode": "GB"
+  },
+  "address": {
+    "line1": "Langhorn Drive"
+  },
+  "location": {
+    "longitude": "-0.343232",
+    "latitude": "51.450761"
+  },
+  "markets": [
+  {
+    "id": "201"
+  },
+  {
+    "id": "202"
+  }
+  ],
+  "dmas": [
+  {
+    "id": 601
+  },
+  {
+    "id": 602
+  }
+  ],
+  "accessibleSeatingDetail": "Elton John-Saturday 3rd June 2017 Little Mix-Sunday 25th June 2017 Refer to the Ticketmaster Accessibility line on 0800 988 4440 (all tickets subject to availability). Harlequins Matches (ONLY) ---------------------------- Please call Harlequins Ticket Office on 0208 410 6010 Monday to Friday between 09:00 and 16:30.",
+  "generalInfo": {
+    "childRule": "Juniors (Under 16) to be accompanied by an adult"
+  },
+  "_links": {
+    "self": {
+      "href": "/discovery/v2/venues/KovZ9177-Kf?locale=en-de"
+    }
+  }
+}%>
